<resources>
    <string name="app_name">Dr.Medic</string>
    <string name="main_logo">Main Logo</string>
    <string name="from">from</string>
    <string name="company_logo">Company logo</string>
    <string name="dr_medic">Dr. Medic</string>
    <string name="orange_dot">.</string>
    <string name="onboarding_text">Connecting Doctors and Patients around the country to premium health care services.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome!</string>
    <string name="please_sign_in_to_your_account">Please sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="google_logo">Google logo</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="get_started2">Get Started!</string>
    <string name="please_fill_in_the_form_to_continue">Please fill in the form to continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Home Address</string>
    <string name="create_password">Create Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="main_logo_1">Main Logo</string>
    <string name="today_02_march">Today, 02 March</string>
    <string name="you_have_an_appointment_today_details_below">You have an appointment today</string>
    <string name="appointment_with_doctor_jinmi_shemfe">Appointment with Doctor Jinmi Shemfe</string>
    <string name="time_13_00_central_african_time">Time: 13:00 central African time</string>
    <string name="location_jos_university_teaching_hospital">Location: Jos University teaching Hospital</string>
    <string name="medication">Medication</string>
    <string name="see_all">See all</string>
    <string name="categories">Categories</string>
    <string name="doctors">Doctors</string>
    <string name="hospital">Hospital</string>
    <string name="news">News</string>
    <string name="hello">Hello</string>
    <string name="there">There</string>
    <string name="ex">!</string>
    <string name="doctor_grace">Doctor Grace</string>
    <string name="dentist">Dentist</string>
    <string name="good_morning">Good Morning,</string>
    <string name="damilola">Damilola</string>
    <string name="avatar">Avatar</string>
    <string name="dr_grace_mark">Dr. Grace Mark</string>
    <string name="dental_specialist">Dental Specialist</string>
    <string name="timer">Wed, 02 January 2022, 07:00am</string>
    <string name="timer_clock">timer clock</string>
    <string name="juth_plateau_state_nigeria">JUTH, Plateau State, Nigeria</string>
    <string name="hospital_txt">Hospital</string>
    <string name="doctors_txt">Doctors</string>
    <string name="medication_txt">Medication</string>
    <string name="enquiries">Enquiries</string>
    <string name="lorem">We provide you with the best doctors across all areas of specialist at the comfort of your home. By clicking on the cards below, you pick your preferred doctor and book an appointment. Seeing a Doctor just got way easier!</string>
    <string name="resumption_time">07:00am-01:00pm</string>
    <string name="ratings">ratings</string>
    <string name="dr_frank_grey">Dr. Frank Grey</string>
    <string name="dermatologist">Dermatologist</string>
    <string name="dr_linus_goleng">Dr. Linus Goleng</string>
    <string name="oncologist">Oncologist</string>
    <string name="dr_stephanie_james">Dr. Stephanie James</string>
    <string name="orthopedics_specialist">Orthopedics Specialist</string>
    <string name="biography">Biography</string>
    <string name="doc_bio_text">Dr. Grace Mark is a Dentist who graduated from University of Ibadan. Currently, Dr. Grace is practicing at Jos University Teaching Hospital, Plateau State...Read More</string>
    <string name="appointment">Appointment</string>
    <string name="mon_n_28">Mon \n 28</string>
    <string name="schedule">Schedule</string>
    <string name="_07_00_am">07:00 AM</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="_01_00_pm">01:00 PM</string>
    <string name="make_appointment">MAKE APPOINTMENT</string>

</resources>