<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dash_bg"
    tools:context=".view.SignIn">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/mpsrounded"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="72sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="-40dp"
            android:fontFamily="@font/mpsrounded"
            android:text="@string/there"
            android:textColor="@color/black"
            android:textSize="72sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/mpsroundedrr"
            android:text="@string/please_sign_in_to_your_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:fontFamily="@font/mpsrounded"
        android:text="@string/ex"
        android:textColor="@color/btn_orange"
        android:textSize="72sp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="33dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/mpsroundedrr"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="33dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/mpsroundedrr"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="227dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="33dp"
        android:text="@string/forgot_password"
        android:textColor="@color/btn_blue"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btn_blue_back"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/mpsrounded"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btn_white_back"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/google_logo"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/mpsrounded"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/btn_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/mpsroundedrr"
            android:gravity="center_vertical"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/mpsrounded"
            android:text="@string/sign_up"
            android:textColor="@color/btn_orange"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>