<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dash_bg"
    tools:context=".view.SignUp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mpsrounded"
            android:text="@string/get_started2"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/mpsroundedrr"
            android:text="@string/please_fill_in_the_form_to_continue"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/et_bg"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="18dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/et_bg"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/et_bg"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/et_bg"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/et_bg"
                android:ems="10"
                android:hint="@string/home_address"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/et_bg"
                android:ems="10"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btn_blue_back"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/mpsrounded"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="74dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/mpsroundedrr"
            android:gravity="center_vertical"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/mpsrounded"
            android:text="@string/sign_in"
            android:textColor="@color/btn_orange"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>