<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dash_bg"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/mpsrounded"
            android:text="@string/today_02_march"
            android:textColor="@color/btn_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mpsrounded"
                    android:text="@string/good_morning"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mpsrounded"
                    android:letterSpacing="0.05"
                    android:text="@string/damilola"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/avatar"
                android:src="@drawable/ic_avatar" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/mpsroundedrr"
            android:text="@string/you_have_an_appointment_today_details_below"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/btn_orange"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="9dp">

            <ImageView
                android:id="@+id/docc"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/doctor_grace"
                android:src="@drawable/ic_docc" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="11dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mpsrounded"
                    android:text="@string/dr_grace_mark"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mpsroundedrr"
                    android:text="@string/dental_specialist"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="17dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_card"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/timer"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:contentDescription="@string/timer_clock"
                    android:src="@drawable/ic_timer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/timer"
                    android:fontFamily="@font/mpsrounded"
                    android:text="@string/timer"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/locator"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:contentDescription="@string/timer_clock"
                    android:src="@drawable/ic_locator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/locator"
                    android:fontFamily="@font/mpsrounded"
                    android:text="@string/juth_plateau_state_nigeria"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/see_all"
            android:textColor="@color/btn_blue"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_cardView2"
        android:layout_width="151dp"
        android:layout_height="140dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/bg_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/ic_hospi"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/medication"
            android:src="@drawable/ic_hospi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ic_hospi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/hospital_txt"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cardView3"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/ic_docc"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/medication"
            android:src="@drawable/ic_doc1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ic_docc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/doctors_txt"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/bg_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cardView2">

        <ImageView
            android:id="@+id/ic_medic"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/medication"
            android:src="@drawable/ic_medic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ic_medic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/medication_txt"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <ImageView
            android:id="@+id/ic_enqi"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/medication"
            android:src="@drawable/ic_enq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ic_enqi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/enquiries"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>